# goodgame_empire_import

./: .gitignore  .travis.yml  Cargo.toml  Readme.md  search-index.js
byte_stream_splitter/: enum.SplitError.html  enum.SplitType.html  index.html  sidebar-items.js  struct.ByteStreamSplitter.html  type.SplitResult.html
goodgame_empire_import/: fn.as_json.html  fn.read_castles.html  fn.read_names.html  index.html  sidebar-items.js
goodgame_empire_import/connection/: index.html  sidebar-items.js  struct.Connection.html  struct.DUTCH_SERVER.html
goodgame_empire_import/data/: enum.World.html  index.html  sidebar-items.js  struct.Castle.html  struct.DataMgr.html  struct.User.html
libc/: constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ACCOUNTING.html  constant.ADFS_SUPER_MAGIC.html  constant.AFFS_SUPER_MAGIC.html  constant.AF_NETLINK.html  constant.ALT_DIGITS.html  constant.AM_STR.html  constant.BOOT_TIME.html  constant.BUFSIZ.html  constant.CODA_SUPER_MAGIC.html  constant.CODESET.html  constant.CPU_SETSIZE.html  constant.CRAMFS_MAGIC.html  constant.CRNCYSTR.html  constant.DAY_1.html  constant.DAY_2.html  constant.DAY_3.html  constant.DAY_4.html  constant.DAY_5.html  constant.DAY_6.html  constant.DAY_7.html  constant.DEAD_PROCESS.html  (+696 more)
src/: byte_stream_splitter.rs  connection.rs  data.rs  error.rs  format_json.rs  gbd.rs  header.rs  lib.rs  main.rs  map.rs  packet.rs  raw_connection.rs  smartfox.rs  splitter.rs
tests/: read_from_server.rs
(+182 files in other folders)
