[package]
name = "goodgame_empire_import"
version = "0.0.2"
authors = ["bjorn"]

[lib]
name = "goodgame_empire_import"
path = "src/lib.rs"
doc = true

[[bin]]
name = "goodgame_empire_import"
path = "src/main.rs"
doc = false

[dependencies]
slog = { version = "1.3.0", features = ["max_level_trace"] }
slog-term = "1.3.3"
slog-stream = "1.2.0"
slog-json = "1.2.0"

error-chain = "0.5.0"

"rustc-serialize" = "0.3.18"
byte_stream_splitter = "0.1.3"
lazy_static = "0.2.1"
regex = "0.1"
