[package]
name = "gge"
version = "0.1.1"
authors = ["bjorn"]

[lib]
name = "gge"
path = "src/lib.rs"
doc = true

[[bin]]
name = "gge"
path = "src/main.rs"
doc = false

[[bin]]
name = "dummy_gge_server"
path = "src/bin/dummy_gge_server.rs"
doc = false

[dependencies]
slog = { version = "1.4", features = ["max_level_trace"] }
slog-scope = "0.2"
slog-term = "1.3"
slog-stream = "1.2"
slog-json = "1.2"

error-chain = "0.8"

byte_stream_splitter = "0.1.3"
lazy_static = "0.2.1"
regex = "0.2"

serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
