[package]
name = "gge"
version = "0.1.1"
authors = ["bjorn"]

[lib]
name = "gge"
path = "src/lib.rs"
doc = true

[[bin]]
name = "gge"
path = "src/main.rs"
doc = false

[[bin]]
name = "dummy_gge_server"
path = "src/bin/dummy_gge_server.rs"
doc = false

[dependencies]
slog = { version = "2.0", features = ["max_level_trace"] }
slog-scope = "4.0"
slog-term = "2.2"
slog-stream = "1.2"
slog-json = "2.0"

error-chain = "0.11"

byte_stream_splitter = "0.1.3"
lazy_static = "0.2.1"
regex = "0.2"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

futures = "0.1"
tokio-core = "0.1"
tokio-service = "0.1"

smartfox = { git = "https://github.com/bjorn3/smartfox_rust", version = "0.1.0" }
